# serializer version: 1
# name: test_basic_sqlmodel_feature_creation
  '71b158c9'
# ---
# name: test_composite_key_multiple_columns
  dict({
    'id_columns': list([
      'user_id',
      'session_id',
      'timestamp',
    ]),
    'metaxy_feature_version': '70c01863',
    'metaxy_provenance_by_field': dict({
      'event': '0e1c4ff5',
      'metric': '3f943f7b',
    }),
  })
# ---
# name: test_feature_version_method
  'd12ccea1'
# ---
# name: test_feature_with_dependencies
  dict({
    'child': '246c767b',
    'parent': '143c0769',
  })
# ---
# name: test_feature_with_field_dependencies
  '57604d37'
# ---
# name: test_graph_snapshot_inclusion
  '6768602d'
# ---
# name: test_provenance_method
  dict({
    'embeddings': '072b1924',
    'processed_data': '168d2932',
  })
# ---
# name: test_sqlmodel_duckdb_custom_id_columns
  dict({
    'child': list([
      dict({
        'metaxy_data_version': '80024271',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t1',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '96611262',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '80024271',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t1',
        }),
        'session_id': 10,
        'summary': 'User 1 Session 10',
        'total_duration': 30.5,
        'user_id': 1,
      }),
      dict({
        'metaxy_data_version': '17182269',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t2',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '96611262',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '17182269',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t2',
        }),
        'session_id': 20,
        'summary': 'User 1 Session 20',
        'total_duration': 45.0,
        'user_id': 1,
      }),
      dict({
        'metaxy_data_version': '44068716',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t3',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '96611262',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '44068716',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t3',
        }),
        'session_id': 10,
        'summary': 'User 2 Session 10',
        'total_duration': 15.0,
        'user_id': 2,
      }),
      dict({
        'metaxy_data_version': '71931327',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t4',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '96611262',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '71931327',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t4',
        }),
        'session_id': 30,
        'summary': 'User 2 Session 30',
        'total_duration': 60.0,
        'user_id': 2,
      }),
    ]),
    'parent': list([
      dict({
        'activity_type': 'read',
        'duration': 30.5,
        'metaxy_data_version': '42449508',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a1',
          'duration': 'hash_d1',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '5533def7',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '42449508',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a1',
          'duration': 'hash_d1',
        }),
        'session_id': 10,
        'timestamp': 1000,
        'user_id': 1,
      }),
      dict({
        'activity_type': 'write',
        'duration': 45.0,
        'metaxy_data_version': '73436573',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a2',
          'duration': 'hash_d2',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '5533def7',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '73436573',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a2',
          'duration': 'hash_d2',
        }),
        'session_id': 20,
        'timestamp': 1100,
        'user_id': 1,
      }),
      dict({
        'activity_type': 'read',
        'duration': 15.0,
        'metaxy_data_version': '19169793',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a3',
          'duration': 'hash_d3',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '5533def7',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '19169793',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a3',
          'duration': 'hash_d3',
        }),
        'session_id': 10,
        'timestamp': 1200,
        'user_id': 2,
      }),
      dict({
        'activity_type': 'read',
        'duration': 60.0,
        'metaxy_data_version': '26487761',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a4',
          'duration': 'hash_d4',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '5533def7',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '26487761',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a4',
          'duration': 'hash_d4',
        }),
        'session_id': 30,
        'timestamp': 1300,
        'user_id': 2,
      }),
      dict({
        'activity_type': 'write',
        'duration': 25.5,
        'metaxy_data_version': '18670540',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a5',
          'duration': 'hash_d5',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '5533def7',
        'metaxy_materialization_id': None,
        'metaxy_project_version': '6f4998ee',
        'metaxy_provenance': '18670540',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a5',
          'duration': 'hash_d5',
        }),
        'session_id': 10,
        'timestamp': 1400,
        'user_id': 3,
      }),
    ]),
  })
# ---
# name: test_sqlmodel_feature_id_columns_with_joins
  dict({
    'expected_join': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
    'feature_a_rows': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        2,
        '2024-01-02',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
    'feature_b_rows': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
  })
# ---
# name: test_sqlmodel_feature_multiple_fields
  'b7c55714'
# ---
# name: test_sqlmodel_feature_with_duckdb_store
  list([
    dict({
      'duration': 120.5,
      'metaxy_data_version': '20633920',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash1',
        'frames': 'hash1',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '8b102a70',
      'metaxy_materialization_id': None,
      'metaxy_project_version': '23b5a5c4',
      'metaxy_provenance': '20633920',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash1',
        'frames': 'hash1',
      }),
      'path': '/videos/v1.mp4',
      'sample_uid': 1,
    }),
    dict({
      'duration': 90.0,
      'metaxy_data_version': '78730964',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash2',
        'frames': 'hash2',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '8b102a70',
      'metaxy_materialization_id': None,
      'metaxy_project_version': '23b5a5c4',
      'metaxy_provenance': '78730964',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash2',
        'frames': 'hash2',
      }),
      'path': '/videos/v2.mp4',
      'sample_uid': 2,
    }),
    dict({
      'duration': 150.3,
      'metaxy_data_version': '15215112',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash3',
        'frames': 'hash3',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '8b102a70',
      'metaxy_materialization_id': None,
      'metaxy_project_version': '23b5a5c4',
      'metaxy_provenance': '15215112',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash3',
        'frames': 'hash3',
      }),
      'path': '/videos/v3.mp4',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_sqlmodel_id_columns_in_snapshot
  dict({
    'id_columns': list([
      'customer_id',
      'order_id',
    ]),
    'metaxy_feature_version': 'e3ee548f',
  })
# ---
# name: test_sqlmodel_rename_validation_with_store
  dict({
    'dep_columns': tuple(
      'source_status',
      'source_priority',
    ),
    'dep_key': 'source/feature',
    'dep_rename': dict({
      'priority': 'source_priority',
      'status': 'source_status',
    }),
  })
# ---
# name: test_version_changes_with_code_version
  dict({
    'v1': 'bd5c14c7',
    'v2': 'fdb6d6c4',
  })
# ---
